# okta-ai-agent-prod

./: .dockerignore  .env.admin  .env.example  .env.gateway.admin  .env.gateway.readonly  .env.readonly  .gitignore  .trivyignore  Docker.md  Dockerfile  Dockerfile.dev  README.md  claude_desktop_config.json.exmaple  docker-compose.yml  pyproject.toml  requirements.txt  terraform_logs.txt  test_users.py
..bfg-report/2025-12-17/18-12-04/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.github/workflows/: deploy.yml
.roo/: mcp.json  rules.md
.roo/modes/: okta-admin.json
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini
packer/: app-server.pkr.hcl  manifest.json  variables.pkr.hcl
packer/scripts/: bootstrap.sh
src/auth_gateway/: Dockerfile  gateway.py  requirements.txt
src/okta_mcp_server/: __init__.py  context.py  mcp_instance.py  oauth_client.py  oauth_jwt_client.py  server.py
src/okta_mcp_server/utils/: __init__.py  client.py  retry.py  retryable_client.py  validation.py
terraform/: .gitignore  alb.tf  backend.tf  bootstrap.sh  cloudwatch_bedrock.tf  group_vars.tftpl  iam.tf  inventory.tftpl  main.tf  mcp.tf  outputs.tf  secrets.tf  security_groups.tf  terraform_logs.txt  terraform_logs.txt.REMOVED.git-id  user-data.sh  variables.tf  vpc.tf
terraform-test/: main.tf  outputs.tf  secrets.tf  secretsmanager-policy.json  terraform.tfvars.example  user-data.sh  variables.tf  vpc.tf
terraform/ansible/: ansible.cfg  playbook.yml  requirements.yml
terraform/ansible/group_vars/: all.yml
terraform/userdata/: mcp-init.sh
(+36 files in other folders)
